--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "circular-json": "^0.5.9",
+    "cors": "^2.8.5",
+    "flatted": "^3.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
